--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,26 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+"
+    "url": "git+https://github.com/Yair-N/second-project-Django.git"
   },
   "keywords": [
     "Nothing yet"
   ],
   "author": "Yair-N",
   "license": "",
+  "homepage": "",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
     "css-loader": "^6.7.3",
     "fuse.js": "^6.6.2",
+    "html-loader": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "style-loader": "^3.3.1",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "svg-url-loader": "^8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -35,8 +38,12 @@
     "babel-loader": "^9.1.2",
     "babel-plugin-styled-components": "^2.0.7",
     "core-js": "^3.27.1",
+    "css-loader": "^6.7.3",
     "html-webpack-plugin": "^5.5.0",
+    "interpolate-html-plugin": "^4.0.0",
     "source-map-loader": "^4.0.1",
+    "style-loader": "^3.3.1",
+    "svg-url-loader": "^8.0.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
