--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
     "css-loader": "^6.7.3",
+    "dotenv": "^16.0.3",
     "fuse.js": "^6.6.2",
     "html-loader": "^4.2.0",
     "react": "^18.2.0",
