--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,11 +27,13 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.3",
+    "chart.js": "^4.2.0",
     "css-loader": "^6.7.3",
     "dotenv": "^16.0.3",
     "fuse.js": "^6.6.2",
     "html-loader": "^4.2.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.7.0",
