--- a/backend/.vscode/settings.json
+++ b/backend/.vscode/settings.json
@@ -3,6 +3,10 @@
     "files.autoSave": "onFocusChange",
     "python.formatting.provider": "black",
     "cSpell.words": [
+        "Callsign",
+        "dropna",
+        "isin",
+        "usecols",
         "wbstbh",
         "yair"
     ]
